# drf_2fa_api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
nginx/: Dockerfile  default.conf
scripts/: entrypoint.sh
src/apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
src/apps/accounts/migrations/: 0001_initial.py
src/config/: asgi.py  logging_config.py  settings.py  urls.py  wsgi.py
src/utils/: common.py  jwt.py
tests/unit/: test_common_utils.py  test_temp_token_utils.py
